# llama-mgr

./: .gitignore  CRUSH.md  Cargo.toml  GEMINI.md  QWEN.md  README.md  flake.nix  shell.nix
src/: config.rs  error.rs  main.rs
src/commands/: convert.rs  daemon.rs  install.rs  mod.rs  quantize.rs  server.rs  set_instance.rs  uninstall.rs
src/external_tools/: cmake.rs  git.rs  mod.rs  ninja.rs  uv.rs  version.rs
