[package]
name = "llama-mgr"
version = "0.1.0"
edition = "2024"
authors = ["SteelPh0enix <wojciech_olech@hotmail.com>"]
description = "Utility for managing llama.cpp tools"
license = "MIT"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
git2 = { version = "0.20.2", features = [
    "vendored-libgit2",
    "vendored-openssl",
] }
toml = "0.9.5"
