[package]
name = "llama-mgr"
version = "0.1.0"
edition = "2024"
authors = ["SteelPh0enix <wojciech_olech@hotmail.com>"]
description = "Utility for managing llama.cpp tools, models and server instances."
license = "MIT"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
env_logger = "0.11.8"
exitcode = "1.1.2"
git2 = { version = "0.20.2", features = [
    "vendored-libgit2",
    "vendored-openssl",
] }
log = "0.4.27"
regex = "1.11.1"
shellexpand = "3.1.1"
thiserror = "2.0.14"
toml = "0.9.5"
which = "8.0.0"

[dev-dependencies]
serial_test = "3.2.0"
